# europa

./: Cargo.toml  README.md  config.json
apps/europa/: Cargo.toml
apps/europa/src/: config.rs  main.rs
apps/europa/src/onboard/: components.rs
apps/europa/src/wallet/: backup.rs  backup_reveal.rs  dashboard.rs  mod.rs  receive.rs  send.rs  send_scan.rs
apps/europa/src/web/assets/: app.js  styles.css
crates/mibilleterabitcoin-common/src/: lib.rs
